Fix home link overlapping; make attacks last longr

--- a/game.css
+++ b/game.css
@@ -119,6 +119,7 @@ main {
 	max-width: 250px;
 	text-align: left;
 	display: none;
+	z-index: 100;
 }
 
 .tooltip p {
@@ -143,6 +144,7 @@ main {
 	right: 0;
 	text-align: center;
 	color: #1a4aa0;
+	z-index: -100;
 }
 
 .link-back a {
@@ -208,7 +210,7 @@ main {
 
 #focused-body {
 	width: 640px;
-	z-index: -1000;
+	z-index: -50;
 	position: absolute;
 	top: 75px;
 	left: 0px;
